Adjustable 'Placeholder' tags and included responsive sizing in CSS.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                           <div class="input-box">
                             <label class="details">Order Notes</label>
-                            <input type="text" name="Extra requests" placeholder="Enter extra details">                           
+                            <input type="text" name="Extra requests/query" placeholder="Enter extra details">                           
                           </div></br>  
 
                           <label class="title">Please select one<span>*</span></label><br><br>
