Access key added.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <div class="container-form">
                     <form action="https://api.web3forms.com/submit" method="POST" onsubmit="validateForm(event)">
                         <div class="user-details">
-                          <input type="hidden" name="access_key" value="c6d86020-12c3-433d-baf8-e3f8e615d0d3">
+                          <input type="hidden" name="access_key" value="46d2be69-a033-43a6-b19a-41001d527d7a">
                           <div class="input-box">
-                            <label class="details">Full Name<span>*</span></label>
+                            <label class="details">Name<span>*</span></label>
                             <input type="text" name="fullname" value="" placeholder="Enter full name" required>
                           </div>
                           
@@ -61,7 +61,7 @@
                           </div>
 
                           <div class="input-box">
-                            <label class="details">Order Notes</label>
+                            <label class="details">Notes</label>
                             <input type="text" name="Extra requests/query" placeholder="Enter extra details">                           
                           </div></br>  
 
