Adjusting responsive settings

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                           <label class="title">Please select one<span>*</span></label><br><br>
                           
-                          <div id="box-size" class="tick-box">
+                          <div class="tick-box">
                             <input type="radio" name="Christmas Day Delivery" value=""><label>Christmas Day Delivery</label>
                             <input type="radio" name="Christmas Eve Delivery" value=""><label>Christmas Eve Delivery</label>
                             <input type="radio" name="Collection" value=""><label>Collection</label>
